# Distributed-Inference-on-Multi-Device

./: .gitignore  pyproject.toml  run_node_a.py  run_node_b.py  split_inference.py  transport.py
phase0_validate/: split_inference.py
phase1_server/: package.json
phase2_pipeline/: run_node_a.py  run_node_b.py  transport.py
signaling/: package-lock.json  signaling.js
