[project]
name = "distributed-computing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.41.0",
    "numpy>=2.4.3",
    "torch>=2.6.0",
    "transformers>=4.40.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu124"
